cluster/deployments/concourse-ci/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: concourse-ci-main
  labels:
    app: concourse-ci-web
