cluster/deployments/concourse-ci/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: concourse-ci-web
  namespace: concourse-ci-main
spec:
  rules:
  - host: {HOST}
    http:
      paths:
      - backend:
          serviceName: concourse-ci-web
          servicePort: 8080
        path: /
